  * Added class ".colborder" to grid.css. [OFB]
  * Added .error, .notice and .success classes to typography.css. [OFB]
  * Added tests for more elements which gets reset in reset.css [OFB, GR]
  * Added forms.css, awaiting implementation. Moved form styling from typography.css [OFB]
  * Updated compressor script to include forms.css [OFB]
  * Improved forms.html tests for upcoming forms.css implementation. This will change based on the 
    markup that forms.css will use. [OFB]
  * Fixed clearing image in button element bug in buttons.css [OFB]
  * Fixed bug where IE6 clipps pushed/pulled elements. [OFB]
  * Fixed typo in grid.css formula. [OFB]
  * Fixed varying formatting across core files. [OFB]
  * Fixed legent element in IE6. [OFB]
  * Fixed indentation in test files. [OFB]
  * Removed tests for plugins not bundled with the next release. [OFB]
  * Improved styling of <h3>. [OFB]
  * Fixed indentation bug in ul/ol, removed some redundant styling. [OFB]
  

Version 0.5 - 28/8/2007
--
  * Changed grid width from 14 to 24 columns [OFB]
  * Removed 'first' CSS class and the need to apply it to the first column in a row of columns. [OFB]
  * Reverted to using pixels instead of em units to specify vertical spacing due to baseline issues with 
    all browsers except Firefox. [OFB]
  * New set of default fonts. (Experimental) [OFB]
  * Added test files [OFB]


Version 0.4 - 11/08/2007
--
  * All font sizes and vertical margins are now elastic, through the use of em units. 
    Resizing works great in every tested browser. [OFB]
  * Comes with a new, compressed version of BP, which reduces the size of the core files by 60 percent. [OFB]
  * Support for incremental leading, contributed by Mark Boulton. [OFB]
  * Adds perfected CSS buttons, by Kevin Hale of Particletree fame. [OFB]
  * Fixes all known IE bugs. [OFB]
  * Loads of minor fixes and additions. [OFB]


Initial Release - 03/08/2007
--
  * Initial release of Blueprint
