@@ -1,19 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 	<title>Blueprint CSS Framework Test Suite</title>
 
-    <!-- Framework CSS -->
-	<link rel="stylesheet" href="../blueprint/compressed/screen.css" type="text/css" media="screen, projection" />
-	<link rel="stylesheet" href="../blueprint/compressed/print.css" type="text/css" media="print" />
-    <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
+  <!-- Framework CSS -->
+	<link rel="stylesheet" href="../blueprint/compressed/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="../blueprint/compressed/print.css" type="text/css" media="print">
+  <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
 	
 	<!-- Import fancy-type plugin for the sample section. -->
-	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection" />
+	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection">
 	
 	<!-- Show the grid and baseline -->
 	<style type="text/css">
@@ -26,7 +26,7 @@
 
 	<div class="container">
 		<h2>Tests for common HTML elements</h2>
-		<hr />
+		<hr>
     
     <h5>PARAGRAPHS <span class="alt">&amp;</span> BOXES</h5>
     
@@ -53,7 +53,7 @@
 			</blockquote>    
     
     </div>
-    <hr />
+    <hr>
     
     
     <h5>LISTS</h5>
@@ -90,7 +90,6 @@
 				  </ul>
 				</ol>
 			</ol>
-			<ul>
     </div>
     
     <div class="column span-8 last">
@@ -103,7 +102,7 @@
       	<dd>definition list dd</dd>
       </dl>			
     </div>
-    <hr />
+    <hr>
     
     <h5>HEADINGS</h5>
     
@@ -117,11 +116,11 @@
     </div>
     
     <div class="column span-8">
-			<h1>Heading 1</h1><hr />
-			<h2>Heading 2</h2><hr />
-			<h3>Heading 3</h3><hr />
-			<h4>Heading 4</h4><hr />
-			<h5>Heading 5</h5><hr />
+			<h1>Heading 1</h1><hr>
+			<h2>Heading 2</h2><hr>
+			<h3>Heading 3</h3><hr>
+			<h4>Heading 4</h4><hr>
+			<h5>Heading 5</h5><hr>
 			<h6>Heading 6</h6>
     </div>
     
@@ -133,7 +132,7 @@
 			<h5>Heading 5</h5>
 			<h6>Heading 6</h6>
     </div>
-    <hr />    
+    <hr>    
     
 
     <h5>MISC ELEMENTS</h5>
@@ -226,21 +225,19 @@ Not indented
     </div>
     
     <div class="column span-8 last">
-      <del>&lt;del&gt; deleted</del><br />
-      <dfn>&lt;dfn&gt; dfn</dfn><br />
-      <em>&lt;em&gt; emphasis</em><br />
-      <a>&lt;a&gt; anchor</a><br />
-      <a href="http://www.google.com">&lt;a&gt; a + href</a><br />
-      <abbr title="extended abbr text should show when mouse over">&lt;abbr&gt; abbr - extended text when mouseover.</abbr><br />
-      <acronym title="extended acronym text should show when mouse over">&lt;acronym&gt; acronym - extended text when mouseover.</acronym><br />
+      <del>&lt;del&gt; deleted</del><br>
+      <dfn>&lt;dfn&gt; dfn</dfn><br>
+      <em>&lt;em&gt; emphasis</em><br>
+      <a>&lt;a&gt; anchor</a><br>
+      <a href="http://www.google.com">&lt;a&gt; a + href</a><br>
+      <abbr title="extended abbr text should show when mouse over">&lt;abbr&gt; abbr - extended text when mouseover.</abbr><br>
+      <acronym title="extended acronym text should show when mouse over">&lt;acronym&gt; acronym - extended text when mouseover.</acronym><br>
     </div>
-    <hr />
+    <hr>
 
 
-<p><a href="http://validator.w3.org/check?uri=referer">
-  <img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
-</a></p>
-
+    <p><a href="http://validator.w3.org/check?uri=referer">
+    <img src="http://www.w3.org/Icons/valid-html401-blue" alt="Valid HTML 4.01 Strict" height="31" width="88"></a></p>
 		
 	</div>
 
