@@ -1,19 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 	<title>Blueprint CSS Framework Sample Page</title>
 
-    <!-- Framework CSS -->
-	<link rel="stylesheet" href="../blueprint/compressed/screen.css" type="text/css" media="screen, projection" />
-	<link rel="stylesheet" href="../blueprint/compressed/print.css" type="text/css" media="print" />
-    <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
+  <!-- Framework CSS -->
+	<link rel="stylesheet" href="../blueprint/compressed/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="../blueprint/compressed/print.css" type="text/css" media="print">
+  <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
 	
 	<!-- Import fancy-type plugin for the sample section. -->
-	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection" />
+	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection">
 </head>
 
 <body>
@@ -66,8 +66,7 @@
 	  </div>		
 		
     <p><a href="http://validator.w3.org/check?uri=referer">
-      <img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
-    </a></p>
+    <img src="http://www.w3.org/Icons/valid-html401-blue" alt="Valid HTML 4.01 Strict" height="31" width="88"></a></p>
 		
 	</div>
 
